--- a/src/App.css
+++ b/src/App.css
@@ -75,13 +75,13 @@ a{
     text-align: center;
 }
 .container > header h1{
-	font-family: 'Raleway', sans-serif;
-	font-size: 35px;
-	line-height: 35px;
-	position: relative;
-	color: lightskyblue;
-    padding: 0px 0px 5px 0px;
-	font-weight:600;
+  font-size: 60px;
+  color: pink;
+  padding: 2px 0 10px 0;
+  font-family: 'FranchiseRegular',Arial,sans-serif;
+  font-weight: bold;
+  text-align: center;
+  padding-bottom: 30px;
 }
 .container > header h1 span{
 	color: #7cbcd6;
@@ -308,7 +308,7 @@ p.signin.button{
 
 /*styling the links to change from one form to another */
 
-p.change_link{
+  p.change_link{
 	position: absolute;
 	color: rgb(127, 124, 124);
 	left: 0px;
