--- a/src/Pet.css
+++ b/src/Pet.css
@@ -58,7 +58,7 @@ body {
   width: 100%;
   height: 100%;
   -o-object-fit: contain;
-     object-fit: contain;
+     object-fit: cover;
 }
 .card-body {
   margin-top: -100px;
