--- a/src/Pet.css
+++ b/src/Pet.css
@@ -48,21 +48,116 @@ body {
   background-color: #dddddd;
 } */
 
-.card {
-  border: 0;
-  border-radius: 0;
-  background-color: transparent;
+h2{
+  font-size: 40px;
+  text-align: center;
+  font-family: -webkit-pictograph;
+  color: pink;
+  font-weight: bold;
+  padding: 4px 6px 4px;
+  background: rgba(255, 255, 255, 1.6);
+  border-radius: 10px
 }
+
+h3{
+  font-size: 20px;
+  text-align: center;
+  font-family: 'FranchiseRegular',Arial,sans-serif;
+  font-weight: bold;
+  color: pink;
+  background: rgba(255, 255, 255, 1.6);
+  border-radius: 10px
+}
+
+h4 {
+  font-size: 40px;
+  text-align: center;
+  font-family: -webkit-pictograph;
+  color: pink;
+  font-weight: bold;
+  padding: 4px 6px 4px;
+  background: rgba(255, 255, 255, 1.6);
+  border-radius: 16px 16px 16px 16px;
+}
+
+h5 {
+  font-size: 40px;
+  text-align: center;
+  font-family: -webkit-pictograph;
+  color: pink;
+  font-weight: bold;
+  padding: 0px 6px 4px;
+}
+
+.width-1000 {
+  width: 1000px;
+  position: relative;
+  left: -140px;
+}
+
+
+.pet-container {
+  width: 500px;
+  margin: auto;
+  width: 60%;
+}
+
+.matched-pets {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1000px;
+}
+
+.matched-pets .card-container-master {
+  width: 30%;
+  margin: auto;
+}
+
+.card {
+  /* border: 0; */
+  border-radius: 8px;
+  background-color: transparent;
+  position: relative;
+  overflow: hidden;
+  border-style: ridge;
+  /* width: 400px; */
+  /* height: 250px; */
+}
+
+.card-container-master {
+  width: 100%;
+}
+
 .card-img img {
+  border-radius: 8px;
   padding: 15px;
   width: 100%;
   height: 100%;
-  -o-object-fit: contain;
-     object-fit: cover;
+  object-fit: cover;
 }
 .card-body {
   margin-top: -100px;
   border-radius: 15px;
   padding-top: 100px;
   background-color: #ffffff;
+}
+
+.card-img .close {
+  position: absolute;
+  top: 2px;
+  right: 7px;
+  z-index: 100;
+  background-color: #9b8e8e;
+  padding: 21px 16px 30px;
+  color: #000;
+  font-weight: bold;
+  cursor: pointer;
+  opacity: .2;
+  text-align: center;
+  font-size: 66px;
+  line-height: 10px;
+  border-radius: 50%;
+}
+.card-img:hover .close {
+  opacity: 1;
 }
